welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: ';' expected but 'else' found.
else 
^Program:7: error: Unmatched closing brace '}' ignored here
}
^