welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move (nbPas: Int , versLAvant : Boolean) {if (versLAvant) 
{for (a<- 1 to nbPas )  avance()} }
else 
{for (a<- 1 to nbPas )  recule()} } 